# discord-haskell

./: discord-haskell.cabal  stack.yaml
examples/: gateway.hs
src/Discord/Internal/: Types.hs  Voice.hs
src/Discord/Internal/Gateway/: EventLoop.hs
src/Discord/Internal/Rest/: Guild.hs  Voice.hs
src/Discord/Internal/Types/: Events.hs  Gateway.hs  Guild.hs  Prelude.hs  Voice.hs
src/Discord/Internal/Voice/: EventLoop.hs
test/Discord/Test/: Random.hs
test/Discord/Test/Voice/: EndToEndSpec.hs  TypesSpec.hs
test/Generic/: Encoding.hs
