cabal-version:       2.0
name:                discord-haskell
-- library version is also noted at src/Discord/Rest/Prelude.hs
version:             1.8.8
description:         Functions and data types to write discord bots.
                     Official discord docs <https://discord.com/developers/docs/reference>.
                     .
                     See the project readme for quickstart notes
                     <https://github.com/aquarial/discord-haskell#discord-haskell->
synopsis:            Write bots for Discord in Haskell
homepage:            https://github.com/aquarial/discord-haskell
bug-reports:         https://github.com/aquarial/discord-haskell/issues
license:             MIT
license-file:        LICENSE
author:              Karl
maintainer:          ksfish5@gmail.com
copyright:           2019 Karl
category:            Network
build-type:          Simple
extra-doc-files:     README.md
                   , changelog.md

source-repository head
  type:                git
  location:            https://github.com/aquarial/discord-haskell.git

executable ping-pong
  default-language: Haskell2010
  main-is:             examples/ping-pong.hs
  ghc-options:         -Wall
                       -fno-warn-type-defaults
                       -threaded
  build-depends:       base >= 4 && <5
                     , text
                     , unliftio
                     , discord-haskell

library
  default-language: Haskell2010
  ghc-options:         -Wall
                       -fno-warn-type-defaults
  hs-source-dirs:      src
  exposed-modules:     Discord
                     , Discord.Types
                     , Discord.Handle
                     , Discord.Requests
                     , Discord.Internal.Gateway
                     , Discord.Internal.Gateway.Cache
                     , Discord.Internal.Gateway.EventLoop
                     , Discord.Internal.Voice
                     , Discord.Internal.Voice.EventLoop
                     , Discord.Internal.Rest
                     , Discord.Internal.Rest.Prelude
                     , Discord.Internal.Rest.HTTP
                     , Discord.Internal.Rest.Invite
                     , Discord.Internal.Rest.Emoji
                     , Discord.Internal.Rest.User
                     , Discord.Internal.Rest.Guild
                     , Discord.Internal.Rest.Channel
                     , Discord.Internal.Rest.Voice
                     , Discord.Internal.Rest.Webhook
                     , Discord.Internal.Types
                     , Discord.Internal.Types.Prelude
                     , Discord.Internal.Types.Channel
                     , Discord.Internal.Types.Events
                     , Discord.Internal.Types.Gateway
                     , Discord.Internal.Types.Guild
                     , Discord.Internal.Types.User
                     , Discord.Internal.Types.Embed
                     , Discord.Internal.Types.Voice
  build-depends:       base >= 4 && <5
                     , aeson
                     , async
                     , bytestring
                     , base64-bytestring
                     , containers
                     , data-default
                     , emoji == 0.1.0.2
                     , http-client
                     , random >= 1.2.0
                     , iso8601-time
                     , req
                     , JuicyPixels
                     , safe-exceptions
                     , text
                     , time
                     , unordered-containers
                     , vector
                     , websockets
                     , wuss
                     , mtl
                     , unliftio
                     , network

test-suite discord-haskell-test
  default-language:  Haskell2010
  type:              exitcode-stdio-1.0
  main-is:           Spec.hs
  ghc-options:       -threaded
                     -Wall
                     -rtsopts
                     -with-rtsopts=-N
                     -fno-warn-type-defaults
  hs-source-dirs:    test
  other-modules:
                     Discord.Test.Random
                   , Discord.Test.Voice.EndToEndSpec
                   , Discord.Test.Voice.TypesSpec
                   , Generic.Encoding
  build-depends:     base >= 4 && <5
                   , hspec
                   , discord-haskell
                   , template-haskell
                   , random >= 1.2.0
                   , aeson
                   , text
                   , time
  build-tool-depends: hspec-discover:hspec-discover == 2.*
